testdata/baselines/reference/submodule/compiler/es6ImportWithoutFromClauseNonInstantiatedModule.errors.txt
es6ImportWithoutFromClauseNonInstantiatedModule_1.ts(1,8): error TS2307: Cannot find module 'es6ImportWithoutFromClauseNonInstantiatedModule_0' or its corresponding type declarations.


==== es6ImportWithoutFromClauseNonInstantiatedModule_0.ts (0 errors) ====
    export interface i {
    }
    
==== es6ImportWithoutFromClauseNonInstantiatedModule_1.ts (1 errors) ====
    import "es6ImportWithoutFromClauseNonInstantiatedModule_0";
           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2307: Cannot find module 'es6ImportWithoutFromClauseNonInstantiatedModule_0' or its corresponding type declarations.